--- a/index.html
+++ b/index.html
@@ -29,44 +29,14 @@
 </head>
 
 <body>
-  <div class="ui massive menu">
-    <div class="header item">
-        個人捕蚊燈資訊
-    </div>
-    <div class="right menu">
-      <div class="active grey item">
-          ©2016-2017 TaiwanStat. All Rights Reserved
-      </div>
-    </div>
-  </div>
-  <div class="ui grid">
-    <div class="row">
-      <div class="four wide column">
-        <h4 class="ui header" id="label">掌蚊資訊</h4>
-        <div id="info">
-          <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-          width="200px" height="200px" viewBox="0 0 595.279 841.89" enable-background="new 0 0 595.279 841.89"
-          xml:space="preserve">
-          <rect x="95.244" y="203.833" fill="none" width="377.011" height="377.01"/>
-          <g>
-            <path id="monitor" fill="#FFFFFF" d="M222.238,529.253c-7.937,0-13.89-5.953-15.874-11.906v-1.984l-25.795-160.726
-              c0-9.921,3.969-17.858,13.89-19.842h1.984h178.584c9.921,0,15.874,7.937,17.858,17.858c0,0,0,0,0,1.984l-25.796,160.726
-              c0,7.938-7.937,13.891-17.858,13.891H222.238z M184.537,330.826c-9.922,0-17.858-7.937-17.858-17.858s7.937-17.858,17.858-17.858
-              h41.669v-21.827c0-9.921,7.938-17.858,17.858-17.858h79.371c9.921,0,17.858,7.937,17.858,17.858v21.827h41.669
-              c9.922,0,17.858,7.937,17.858,17.858s-7.937,17.858-17.858,17.858H184.537z M305.577,295.109v-3.969h-43.654v3.969H305.577z"/>
-          </g>
-          </svg>
-        </div>
-      </div>
-      <div class="column">
-        <h4 class="ui header" id="label">一週概況</h4>
-        <div id="heatmap"></div>
-      </div>
-    </div>
+  <div class="ui borderless center aligned text container">
+    <h4 class="ui header" id="label">一週概況</h4>
+    <div id="heatmap"></div>
   </div>
 
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.2.13/dist/semantic.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.2.13/dist/components/form.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.2.13/dist/components/transition.min.js"></script>
