--- a/index.html
+++ b/index.html
@@ -25,16 +25,62 @@
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.2.13/dist/components/icon.css">
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.2.13/dist/components/dropdown.css">
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.2.13/dist/components/transition.css">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css" integrity="sha512-M2wvCLH6DSRazYeZRIm1JnYyh22purTM+FDB5CsyxtQJYeKq83arPe5wgbNmcFXGqiSH2XR8dT/fJISVA1r/zQ=="
+  crossorigin="" />
   <link rel="stylesheet" type="text/css" href="./dist/css/index.css">
 </head>
 
 <body>
   <div class="ui borderless center aligned text container">
-    <h4 class="ui header" id="label">一週概況</h4>
-    <div id="heatmap"></div>
+    <h4 class="ui horizontal divider inverted header">掌蚊資訊</h4>
+    <div class="ui grid">
+      <div class="seven wide column" >
+        <div id="map"></div>
+      </div>
+      <div class="eight wide column" id="info">
+        <div class="ui left aligned container">
+          <table class="ui inverted fixed large table">
+            <tbody>
+              <tr>
+                <td class="right aligned">
+                  <i class="history large icon"></i>
+                  最後更新：
+                </td>
+                <td>
+                  XXXX
+                </td>
+              </tr>
+              <tr>
+                <td class="right aligned">
+                  <i class="cloud large icon"></i>
+                  昨日總數：
+                </td>
+                <td>
+                  XXXX
+                </td>
+              </tr>
+              <tr>
+                <th colspan="2">
+                  <div class="ui labeled button">
+                    <div class="ui red button">
+                      <i class="large talk icon"></i>我有問題
+                    </div>
+                  </div>
+                </th>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+    <h4 class="ui horizontal divider inverted header">一週概況</h4>
+    <div class="row"></div>
+      <div id="heatmap"></div>
+    </div>
   </div>
 
 </body>
+<script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js" integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log=="crossorigin=""></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.2.13/dist/semantic.min.js"></script>
@@ -43,6 +89,7 @@
 <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.2.13/dist/components/dropdown.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.2.13/dist/components/dimmer.min.js"></script>
 <script src="./dist/js/heatmap.js"></script>
+<script src="./dist/js/map.js"></script>
 <script src="./dist/js/index.js"></script>
 
 </html>
