--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.2.13/dist/components/transition.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css" integrity="sha512-M2wvCLH6DSRazYeZRIm1JnYyh22purTM+FDB5CsyxtQJYeKq83arPe5wgbNmcFXGqiSH2XR8dT/fJISVA1r/zQ=="
   crossorigin="" />
-  <link rel="stylesheet" type="text/css" href="./dist/css/index.css">
+  <link rel="stylesheet" type="text/css" href="/dist/css/index.css">
 </head>
 
 <body>
@@ -88,8 +88,8 @@
 <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.2.13/dist/components/transition.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.2.13/dist/components/dropdown.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.2.13/dist/components/dimmer.min.js"></script>
-<script src="./dist/js/heatmap.js"></script>
-<script src="./dist/js/map.js"></script>
-<script src="./dist/js/index.js"></script>
+<script src="/dist/js/heatmap.js"></script>
+<script src="/dist/js/map.js"></script>
+<script src="/dist/js/index.js"></script>
 
 </html>
